testsuite/tests/overloadedrecflds/should_fail/DRFUnused.stderr

DRFUnused.hs:10:16: error: [-Wunused-top-binds (in -Wextra, -Wunused-binds), -Werror=unused-top-binds]
    Defined but not used: ‘foo’
